# rag-postgres-fastapi

./: .gitignore  .template.env   Dockerfile.api  Dockerfile.db  README.md  docker-compose.yml  justfile  pyproject.toml
data/: cs.csv  cs_1.csv
migration/: justfile
migration/alembic/: env.py
migration/alembic/versions/: b007da527345_add_knowledgebase.py  fb2014c591c9_add_vector_extension.py
src/: csv_loader.py  mic_test.py  settings.py
src/adapter/: openai.py
src/app/: answer_kb.py
src/domain/: kb_item.py
src/interface/: http_server.py
src/repo/: base.py  kbrepo.py
